<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_label"
        android:icon="@drawable/label"
        android:title="@string/title_image_labelling" />

    <item
        android:id="@+id/navigation_text_extraction"
        android:icon="@drawable/text_extraction"
        android:title="@string/title_text_extraction" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_object_detection"
        android:icon="@drawable/object_detection"
        android:title="@string/title_object_detection" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>